overlaping fixed

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -87,7 +87,7 @@
       .action-buttons {
         display: flex;
         justify-content: space-around;
-        color: green;
+        color: black;
 
         .fa-black {
           color: black;
